Header text overflow fix

--- a/css/styles.css
+++ b/css/styles.css
@@ -158,7 +158,7 @@ slideShow {  0% {
 #flocraft-text-container img {
     width: 100%;
     max-width: 30vw;
-    min-width: 400px;
+    min-width: 300px;
     height: auto;
 }
 
